# C---ile-Projeler

Aralarinda_Asal_Bulma/: CMakeLists.txt  main.cpp
Basit_Hesap_Makinesi/: main.cpp
Cok_Boyutlu_Dinamik_Matrisler/: CMakeLists.txt  main.cpp
EnBuyuk4SayiyiBulma/: CMakeLists.txt  main.cpp
Fibonacci_Dizisi_Bulma/: CMakeLists.txt  main.cpp
Hotel_Management/: CMakeLists.txt  hotel.cpp  hotel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  room.cpp  room.h  roomsdialog.cpp  roomsdialog.h  roomsdialog.ui
Iki_Nokta_Arasi_Uzaklik_Hesaplama/: CMakeLists.txt  main.cpp  nokta.cpp  nokta.h
Sayi_Tahmini_Oyunu/: CMakeLists.txt  main.cpp
Sicaklik_Donusturucu/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
